kyverno/no_kube_ns/resources/kube_system.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-in-kube-system
  namespace: kube-system
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
